UPDATE: add css class "task", to fix worrd wrapping problem, set input form height to be in line with edit and add task button 	modified:   src/App.css 	modified:   src/App.js 	modified:   src/views/selectTaskList.js 	modified:   src/views/todoTaskList.js

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -42,3 +42,11 @@
   margin: 1px;
 
 }
+input.form-control {
+  height: 42px;
+  margin: 1px;
+}
+
+.task {
+  word-wrap: break-word;
+}
